
[TestPreferReadonlyRule/invalid-0 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:52)
Message: Member 'incorrectlyModifiableStatic' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableStatic {
   3 |           private static incorrectlyModifiableStatic = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-1 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:45)
Message: Member '#incorrectlyModifiableStatic' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableStatic {
   3 |           static #incorrectlyModifiableStatic = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-2 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:57)
Message: Member 'incorrectlyModifiableStaticArrow' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableStaticArrow {
   3 |           private static incorrectlyModifiableStaticArrow = () => 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-3 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:50)
Message: Member '#incorrectlyModifiableStaticArrow' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableStaticArrow {
   3 |           static #incorrectlyModifiableStaticArrow = () => 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-4 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:45)
Message: Member 'incorrectlyModifiableInline' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableInline {
   3 |           private incorrectlyModifiableInline = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 

Diagnostic 2: preferReadonly (7:15 - 7:49)
Message: Member 'incorrectlyModifiableInline' is never reassigned; mark it as `readonly`.
   6 |             return class {
   7 |               private incorrectlyModifiableInline = 7;
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |             };
---

[TestPreferReadonlyRule/invalid-5 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:38)
Message: Member '#incorrectlyModifiableInline' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableInline {
   3 |           #incorrectlyModifiableInline = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 

Diagnostic 2: preferReadonly (7:15 - 7:42)
Message: Member '#incorrectlyModifiableInline' is never reassigned; mark it as `readonly`.
   6 |             return class {
   7 |               #incorrectlyModifiableInline = 7;
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |             };
---

[TestPreferReadonlyRule/invalid-6 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:46)
Message: Member 'incorrectlyModifiableDelayed' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableDelayed {
   3 |           private incorrectlyModifiableDelayed = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-7 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:39)
Message: Member '#incorrectlyModifiableDelayed' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableDelayed {
   3 |           #incorrectlyModifiableDelayed = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-8 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:48)
Message: Member 'childClassExpressionModifiable' is never reassigned; mark it as `readonly`.
   2 |         class TestChildClassExpressionModifiable {
   3 |           private childClassExpressionModifiable = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-9 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:41)
Message: Member '#childClassExpressionModifiable' is never reassigned; mark it as `readonly`.
   2 |         class TestChildClassExpressionModifiable {
   3 |           #childClassExpressionModifiable = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-10 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:48)
Message: Member 'incorrectlyModifiablePostMinus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePostMinus {
   3 |           private incorrectlyModifiablePostMinus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-11 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:41)
Message: Member '#incorrectlyModifiablePostMinus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePostMinus {
   3 |           #incorrectlyModifiablePostMinus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-12 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:47)
Message: Member 'incorrectlyModifiablePostPlus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePostPlus {
   3 |           private incorrectlyModifiablePostPlus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-13 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:40)
Message: Member '#incorrectlyModifiablePostPlus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePostPlus {
   3 |           #incorrectlyModifiablePostPlus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-14 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:47)
Message: Member 'incorrectlyModifiablePreMinus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePreMinus {
   3 |           private incorrectlyModifiablePreMinus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-15 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:40)
Message: Member '#incorrectlyModifiablePreMinus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePreMinus {
   3 |           #incorrectlyModifiablePreMinus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-16 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:46)
Message: Member 'incorrectlyModifiablePrePlus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePrePlus {
   3 |           private incorrectlyModifiablePrePlus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-17 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:39)
Message: Member '#incorrectlyModifiablePrePlus' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiablePrePlus {
   3 |           #incorrectlyModifiablePrePlus = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-18 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:42)
Message: Member 'overlappingClassVariable' is never reassigned; mark it as `readonly`.
   2 |         class TestOverlappingClassVariable {
   3 |           private overlappingClassVariable = 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-19 - 1]
Diagnostic 1: preferReadonly (3:30 - 3:67)
Message: Member 'incorrectlyModifiableParameter' is never reassigned; mark it as `readonly`.
   2 |         class TestIncorrectlyModifiableParameter {
   3 |           public constructor(private incorrectlyModifiableParameter = 7) {}
     |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-20 - 1]
Diagnostic 1: preferReadonly (5:13 - 5:50)
Message: Member 'incorrectlyModifiableParameter' is never reassigned; mark it as `readonly`.
   4 |             public ignore: boolean,
   5 |             private incorrectlyModifiableParameter = 7,
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |           ) {}
---

[TestPreferReadonlyRule/invalid-21 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:41)
Message: Member 'incorrectlyInlineLambda' is never reassigned; mark it as `readonly`.
   2 |         class TestCorrectlyNonInlineLambdas {
   3 |           private incorrectlyInlineLambda = () => 7;
     |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-22 - 1]
Diagnostic 1: preferReadonly (4:5 - 4:17)
Message: Member '_name' is never reassigned; mark it as `readonly`.
   3 |   return class extends Base {
   4 |     private _name: string;
     |     ~~~~~~~~~~~~~
   5 |   };
---

[TestPreferReadonlyRule/invalid-23 - 1]
Diagnostic 1: preferReadonly (4:5 - 4:9)
Message: Member '#name' is never reassigned; mark it as `readonly`.
   3 |   return class extends Base {
   4 |     #name: string;
     |     ~~~~~
   5 |   };
---

[TestPreferReadonlyRule/invalid-24 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {
     |           ~~~~~~~~~~~~~~~
   4 |             prop: '',
---

[TestPreferReadonlyRule/invalid-25 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {
     |           ~~~~~~~~
   4 |             prop: '',
---

[TestPreferReadonlyRule/invalid-26 - 1]
Diagnostic 1: preferReadonly (7:11 - 7:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   6 |         class Test {
   7 |           private testObj = new TestObject();
     |           ~~~~~~~~~~~~~~~
   8 | 
---

[TestPreferReadonlyRule/invalid-27 - 1]
Diagnostic 1: preferReadonly (7:11 - 7:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   6 |         class Test {
   7 |           #testObj = new TestObject();
     |           ~~~~~~~~
   8 | 
---

[TestPreferReadonlyRule/invalid-28 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {
     |           ~~~~~~~~~~~~~~~
   4 |             prop: '',
---

[TestPreferReadonlyRule/invalid-29 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {
     |           ~~~~~~~~
   4 |             prop: '',
---

[TestPreferReadonlyRule/invalid-30 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-31 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-32 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-33 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-34 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-35 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-36 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-37 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-38 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-39 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-40 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-41 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-42 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-43 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-44 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:25)
Message: Member 'testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private testObj = {};
     |           ~~~~~~~~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-45 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:18)
Message: Member '#testObj' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           #testObj = {};
     |           ~~~~~~~~
   4 |           public test(): void {
---

[TestPreferReadonlyRule/invalid-46 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: number = 3;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-47 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: number = 3;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-48 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: number;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-49 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = 'hello';
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-50 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = 'hello';
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-51 - 1]
Diagnostic 1: preferReadonly (5:11 - 5:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   4 |         class Test {
   5 |           private prop = hello;
     |           ~~~~~~~~~~~~
   6 | 
---

[TestPreferReadonlyRule/invalid-52 - 1]
Diagnostic 1: preferReadonly (5:11 - 5:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   4 |         class Test {
   5 |           private prop = hello;
     |           ~~~~~~~~~~~~
   6 |         }
---

[TestPreferReadonlyRule/invalid-53 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = 10;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-54 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = 10;
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-55 - 1]
Diagnostic 1: preferReadonly (5:11 - 5:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   4 |         class Test {
   5 |           private prop = hello;
     |           ~~~~~~~~~~~~
   6 | 
---

[TestPreferReadonlyRule/invalid-56 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = true;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-57 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = true;
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-58 - 1]
Diagnostic 1: preferReadonly (5:11 - 5:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   4 |         class Test {
   5 |           private prop = hello;
     |           ~~~~~~~~~~~~
   6 | 
---

[TestPreferReadonlyRule/invalid-59 - 1]
Diagnostic 1: preferReadonly (8:11 - 8:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   7 |         class Test {
   8 |           private prop = Foo.Bar;
     |           ~~~~~~~~~~~~
   9 | 
---

[TestPreferReadonlyRule/invalid-60 - 1]
Diagnostic 1: preferReadonly (8:11 - 8:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   7 |         class Test {
   8 |           private prop = Foo.Bar;
     |           ~~~~~~~~~~~~
   9 |         }
---

[TestPreferReadonlyRule/invalid-61 - 1]
Diagnostic 1: preferReadonly (10:11 - 10:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   9 |         class Test {
  10 |           private prop = foo;
     |           ~~~~~~~~~~~~
  11 | 
---

[TestPreferReadonlyRule/invalid-62 - 1]
Diagnostic 1: preferReadonly (10:11 - 10:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   9 |         class Test {
  10 |           private prop = foo;
     |           ~~~~~~~~~~~~
  11 |         }
---

[TestPreferReadonlyRule/invalid-63 - 1]
Diagnostic 1: preferReadonly (10:11 - 10:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   9 |         class Test {
  10 |           private prop = foo;
     |           ~~~~~~~~~~~~
  11 |         }
---

[TestPreferReadonlyRule/invalid-64 - 1]
Diagnostic 1: preferReadonly (13:13 - 13:24)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
  12 |           class Test {
  13 |             private prop = bar;
     |             ~~~~~~~~~~~~
  14 | 
---

[TestPreferReadonlyRule/invalid-65 - 1]
Diagnostic 1: preferReadonly (13:13 - 13:24)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
  12 |           class Test {
  13 |             private prop = bar;
     |             ~~~~~~~~~~~~
  14 | 
---

[TestPreferReadonlyRule/invalid-66 - 1]
Diagnostic 1: preferReadonly (14:11 - 14:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
  13 |         class Test {
  14 |           private prop = bar;
     |           ~~~~~~~~~~~~
  15 | 
---

[TestPreferReadonlyRule/invalid-67 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = { foo: 'bar' };
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-68 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = { foo: 'bar' };
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-69 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = [1, 2, 'three'];
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-70 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = [1, 2, 'three'];
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-71 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:26)
Message: Member '_isValid' is never reassigned; mark it as `readonly`.
   2 |         class X {
   3 |           private _isValid = true;
     |           ~~~~~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-72 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: string = 'hello';
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-73 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: string | number = 'hello';
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-74 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop: string;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-75 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-76 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-77 - 1]
Diagnostic 1: preferReadonly (5:11 - 5:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   4 |         class Test {
   5 |           private prop = hello;
     |           ~~~~~~~~~~~~
   6 | 
---

[TestPreferReadonlyRule/invalid-78 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = null;
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-79 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = null;
     |           ~~~~~~~~~~~~
   4 | 
---

[TestPreferReadonlyRule/invalid-80 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = 'hello' as string;
     |           ~~~~~~~~~~~~
   4 |         }
---

[TestPreferReadonlyRule/invalid-81 - 1]
Diagnostic 1: preferReadonly (3:11 - 3:22)
Message: Member 'prop' is never reassigned; mark it as `readonly`.
   2 |         class Test {
   3 |           private prop = Promise.resolve('hello');
     |           ~~~~~~~~~~~~
   4 |         }
---
